# The_Jobfather

./: .gitignore  README.md  pyproject.toml
src/agents/: job_scraper.py
src/db/: job_store.py
src/schemas/: posting_template.json  structured_job.py
