[tool.poetry]
name = "the-jobfather"
version = "0.1.0"
description = ""
authors = ["zmohaveri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^1.3.1"
pydantic = "^2.13.4"
dotenv = "^0.9.9"
devtools = "^0.12.2"
langchain-openai = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
